# LogFold

./: CMakeLists.txt  README.md
decompression/: 2new_decode_and_decompress_matrix.py  decompress_length_binary.py  decompress_pattern_ids.py
example/0/: token.txt
example/compressed/: 0.tar.xz
example/compressed/decompress/: cmp_original_and_decompress.py  decompress_and_decode_matrix.py  decompress_dynamic_ids.py  decompressed-d-ids.txt  decompressed-pattern-ids.txt  final-output.out  get_dict_id_back.py  l1_0_decompressed.txt  l2_0_decompressed.txt  l3_0_decompressed.txt  l4_0_decompressed.txt  l5_0_decompressed.txt  l6_0_decompressed.txt  l8_0_decompressed.txt  new_decode_and_decompress_matrix.py  replace_length_vars.py  replace_pattern_id.py  replace_placeholder_with_id.py  restore_pattern_templates.py  template.txt
include/: LogParser.hpp  TokenManager.hpp  arg.hpp  constant.hpp  processor.hpp  typedef.hpp
include/internal/: out.hpp
include/utils/: Array2.hpp  IndexManager.hpp  IndexMap.hpp  IndexSet.hpp  fpgrow.hpp  fpgrow_cpbase.hpp  pcre2regex.hpp  util.hpp
src/: main.cpp
src/ArguementParser/: parser.cpp
src/LogParser/: parser.cpp  private.cpp
src/LogProcessor/: processor.cpp  worker.cpp
src/TokenManager/: compressor.cpp  manager.cpp
src/util/: util.cpp
